# WalletSweeper

./: .env  Cargo.toml
src/: main.rs
src/chain_config/: chain_config.rs  mod.rs
src/config/: config.rs
src/db/: connection.rs
src/entities/: admin_limits.rs  app_user.rs  bet_co_games.rs  betco_transaction_table.rs  cash_table.rs  casino_game_analytic.rs  coinflip_bet_cash.rs  coinflip_bet_points.rs  contract_action.rs  crash_bets.rs  crash_bets_cash.rs  deposit_receipt.rs  dice_bet_cash.rs  dice_bet_points.rs  flagged_users.rs  gas_donation.rs  leaderboard.rs  limbo_bet_cash.rs  limbo_bet_points.rs  mod.rs  point_table.rs  prelude.rs  processed_transaction.rs  quests_submissions.rs  quick_wags.rs  quick_wags_submissions.rs  raffle_round.rs  raffle_round_cash.rs  raffle_ticket.rs  raffle_ticket_cash.rs  rake_back.rs  rake_back_update.rs  referral_balance.rs  referral_map.rs  sbt_table.rs  suspicious_activities.rs  user_balance.rs  user_connection.rs  user_connection_testnet.rs  user_wallet.rs  (+2 more)
src/error/: error.rs
src/jobs/: index.rs  mod.rs  sweeper.rs
src/state_models/: models.rs
src/tokens/: tokens.rs
src/utils/: free_wallet.rs  mod.rs  token_decimals.rs  update_deposit.rs
