[package]
name = "avitus-casino-sweeper"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.8.0"
actix-web = "4.11.0"
alloy = "1.0.16"
chrono = "0.4.41"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rust_decimal = "1.37.2"
serde = {version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
base64-url = "3.0.0"
futures = "0.3.31"
tokio = {version="1.46.1", features = ["full"]}
futures-util = "0.3.31"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = "0.12.22"
sha2 = "0.10.9"
rand = "0.9.2"
r2d2_redis = "0.14.0"
hex = "0.4.3"
tracing = "0.1.41"
lettre = "0.11.19"
hmac = "0.12.1"
alloy-signer-local = "1.6.1"
